# Projects

./: README.md
MACRIS/: DOCUMENTO_ESTABILIZACION_REPORTES_V17.md  GUIA_SISTEMA_MACRIS.md  PLAN_IMPLEMENTACION_DASHBOARD_ANALITICO_ASISTENTE.md  PLAN_IMPLEMENTACION_IA_OPERATIVA_MACRIS.md  PLAN_IMPLEMENTACION_ULTIMO_MANTENIMIENTO.md  RULES.md  sync_architecture_documentation.md
MACRIS/Admin Equipos/V1/: .gitignore  README.md  index.css  index.html  metadata.json  package-lock.json  package.json  pdf-generator.tsx  qr-scanner.tsx  vite.config.ts
MACRIS/Agenda/: .env.example  .gitignore  DEPLOY.md  capacitor.config.ts  index.css  index.html  netlify.toml  package-lock.json  package.json  vercel.json  vite.config.ts
MACRIS/Agenda/public/: manifest.webmanifest  sw.js
MACRIS/Agenda/src/: api.ts  main.ts  state.ts  supabase.ts  types.ts  ui.ts  vite-env.d.ts
MACRIS/Chatbot/: .env.example  package-lock.json  package.json  tsconfig.json
MACRIS/CotizacionesDesktop/sistema-de-cotizaciones-y-órdenes-macris-v31/src-tauri/: Cargo.toml  tauri.conf.json
MACRIS/CotizacionesDesktop/sistema-de-cotizaciones-y-órdenes-macris-v31/src-tauri/capabilities/: default.json
MACRIS/CotizacionesDesktop/sistema-de-cotizaciones-y-órdenes-macris-v31/src-tauri/src/: lib.rs  main.rs
MACRIS/Inventario/: .gitignore  capacitor.config.ts  index.css  index.html  package-lock.json  package.json  setup.sql  tsconfig.json  vite.config.ts
MACRIS/MACRIS-IA-Core/: .env.example  README.md  package-lock.json  package.json
MACRIS/landing/: index.html
MACRIS/landing_2/: index.html
(+321 files in other folders)
